# osmosis-sdk-python

./: .env.sample  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  build_package.bat  build_package.sh  codecov.yml  example.py  generic_util.py  langchain_example.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_env.bat  test.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  README.md  TESTS.md  dependabot.yml  pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-approve.yml  auto-label-pr.yml  check-pr-title.yml  publish.yml  test.yml  tests.yml
docs/: README.md  architecture.md  cli.md  configuration.md  datasets.md  eval-mode.md  eval.md  native-harbor-backend.md  rewards-api.md  rewards.md  rollout-sdk.md  test-mode.md  troubleshooting.md
docs/local-rollout/: mcp-tools.md  overview.md  reward-functions.md  reward-rubrics.md
docs/remote-rollout/: agent-loop.md  architecture.md  deployment.md  examples.md  overview.md  testing.md
docs/rollout/: README.md  api-reference.md  architecture.md  bench.md  dataset-format.md  eval.md  examples.md  test-mode.md  testing.md
docs/superpowers/specs/: 2026-05-13-cli-list-output-design.md
examples/: EXAMPLES.md  README.md  anthropic_async_example.py  anthropic_async_tool_example.py  anthropic_example.py  anthropic_tool_example.py  langchain_example.py  openai_async_example.py  openai_example.py  openai_streaming_example.py  profiler_example.py  reward_functions.py  rubric_configs.yaml  rubric_functions.py  sample_data.jsonl
examples/multiply_openai_agents/: README.md  main.py
examples/multiply_openai_agents/multiply_rollout/: grader.py  tools.py  utils.py  workflow.py
examples/multiply_strands/: main.py
examples/multiply_strands/multiply_rollout/: grader.py  tools.py  workflow.py
examples/rollout/: Dockerfile  harbor_rollout_server_example.py  local_rollout_server_example.py  local_rollout_server_openai_agents_example.py  local_rollout_server_openai_example.py  submit_with_env_vars_example.py
examples/rollout/multiply_harbor_task/: task.toml
examples/rollout/multiply_openai_agents/: grader.py  tools.py  workflow.py
examples/rollout/multiply_rollout/: grader.py  tools.py  utils.py  workflow.py
examples/rollout/multiply_rollout_openai/: grader.py  tools.py  workflow.py
examples/rollout_v2/: harbor_rollout_server_example.py  rollout_server_example.py
examples/rollout_v2/multiply_harbor_task/: task.toml
examples/rollout_v2/multiply_rollout/: grader.py  workflow.py
osmosis_ai/: __init__.py  _litellm_compat.py  cli.py  cli_commands.py  consts.py  rubric_eval.py  rubric_types.py  utils.py
osmosis_ai/auth/: __init__.py  config.py  credentials.py  flow.py  local_server.py  platform_client.py
osmosis_ai/auth/templates/: error.html
osmosis_ai/cli/: __init__.py  _click_compat.py  console.py  errors.py  main.py  metrics_export.py  metrics_graph.py  paths.py  prompts.py  upgrade.py
osmosis_ai/cli/commands/: auth.py  dataset.py  deploy.py  deployment.py  dev.py  environment.py  eval.py  init.py  model.py  project.py  rollout.py  secret.py  template.py  train.py  workspace.py
osmosis_ai/cli/output/: __init__.py  context.py  display.py  error.py  renderer.py  result.py  serializers.py
osmosis_ai/cli_services/: __init__.py  config.py  dataset.py  engine.py  reporting.py  session.py  shared.py
osmosis_ai/eval/: config.py  executor.py  llm_proxy.py  proxy.py
osmosis_ai/eval/common/: __init__.py  cli.py  dataset.py  errors.py  llm_client.py  runner.py
osmosis_ai/eval/controller/: __init__.py  controller.py  litellm_bridge.py  locks.py  messages.py  process.py  server.py  state.py
osmosis_ai/eval/evaluation/: __init__.py  cache.py  cli.py  eval_fn.py  orchestrator.py  report.py  runner.py
osmosis_ai/eval/rubric/: __init__.py  cli.py  dataset.py  (+3 more)
osmosis_ai/platform/: __init__.py  constants.py
osmosis_ai/providers/: README.md  __init__.py  anthropic_provider.py  base.py  cerebras_provider.py  gemini_provider.py  openai_family.py  openrouter_provider.py  shared.py
osmosis_ai/rollout/: __init__.py  _compat.py  agent_workflow.py  cli.py  cli_utils.py  client.py  console.py  context.py  driver.py  grader.py  network.py  registry.py  testing.py  tools.py  utils.py  validator.py
osmosis_ai/rollout_types/: __init__.py  protocol.py
osmosis_ai/rollout_v2/: __init__.py  agent_workflow.py  context.py  driver.py  execution_backend.py  grader.py  rollout_sample.py  rollout_server_base.py  server_state.py  validator.py
osmosis_ai/rubric/: __init__.py  eval.py
osmosis_ai/templates/: __init__.py  catalog.py  cli.py  init.py  registry.py  source.py
osmosis_ai/templates/cookbook/multiply/rollouts/multiply/: README.md  main.py  pyproject.toml
osmosis_wrap/: __init__.py  consts.py  utils.py
osmosis_wrap/adapters/: __init__.py  anthropic.py  langchain.py  langchain_anthropic.py  langchain_openai.py  openai.py
tests/: conftest.py  test_auth_credentials.py  test_bench_eval_fn.py  test_bench_runner.py  test_cli.py  test_cli_services.py  test_console.py  test_eval_fn.py  test_eval_report.py  test_eval_runner.py  test_litellm_provider.py  test_mcp_agent_loop.py  test_rollout_api_key.py  test_rollout_base.py  test_rollout_client.py  test_rollout_schemas.py  test_rollout_server.py  test_rollout_server_app.py  test_rollout_state.py  test_rollout_testing.py  test_rollout_utils.py  test_rubric_eval.py  test_settings.py  test_test_mode_dataset.py  test_test_mode_providers.py  test_test_mode_runner.py
tests/_data/: __init__.py  sample_messages.json  sample_rollout_request.json  sample_tool_schema.json
tests/_helpers/: __init__.py  factories.py  mock_agents.py
tests/integration/: conftest.py  test_cli_no_direct_stdout_writes.py  test_cli_subprocess_contract.py
tests/unit/: submit_preflight_helpers.py  test_cli.py  test_litellm_provider.py  test_rubric_cli_command.py  test_rubric_engine.py  test_rubric_eval.py  test_utils_decorators.py
(+405 files in other folders)
